# mail.nvim

./: .gitignore  2  Cargo.toml  INSTALL  README.md  lazy.lua  shell.nix
doc/: mail_nvim.txt
src/: api.rs  constants.rs  lib.rs  macros.rs  state.rs
src/api/: api_prelude.rs  config.rs  file.rs  help.rs  mod.rs  prelude.rs
src/api/account/: commands.rs  mod.rs
src/api/config/: config.rs  config_email.rs  email.rs  mod.rs  provider.rs
src/api/config/config_email/: config_email_view_as.rs
src/api/config/ui/: view.rs
src/api/contact/: mod.rs
src/api/email/: arguments.rs  commands.rs  mod.rs
src/api/envelope/: arguments.rs  commands.rs  mod.rs
src/api/folder/: commands.rs  mod.rs
src/api/help/: help.rs
src/commands/: autocomplete.rs  command_tree.rs  mod.rs  prelude.rs  setup.rs
src/commands/account/: list.rs  mod.rs
src/commands/config/: mod.rs
src/commands/config/himalaya/: mod.rs
src/commands/config/settings/: mod.rs
src/commands/email/: get.rs  list.rs
src/commands/envelope/: list.rs
src/commands/folder/: list.rs  mod.rs
src/commands/folder/default/: mod.rs
src/commands/help/: about.rs  changelog.rs  license.rs  mod.rs
src/commands/ui/: close.rs  mod.rs  open.rs  refresh.rs  toggle.rs
src/commands/ui/view/: mod.rs  render.rs
src/commands/ui/view/component/: mod.rs
src/commands/ui/view/component/tag/: mod.rs
src/commands/ui/view/default/: mod.rs
src/providers/: mod.rs
src/providers/himalaya/: list.rs  mod.rs
src/providers/himalaya/account/: get.rs  list.rs  mod.rs
src/providers/himalaya/envelope/: get.rs  list.rs  mod.rs
src/providers/himalaya/folder/: create.rs  delete.rs  expunge.rs  get.rs  list.rs  mod.rs  purge.rs
src/syntax/: mail-file.vim  mail-table.vim
src/utils/: mod.rs
src/utils/buffer/: metadata.rs  mod.rs  name.rs  render.rs
src/utils/keymaps/: mod.rs
src/utils/render/: mod.rs  table.rs
src/utils/render/message/: context.rs  render.rs
src/utils/render/table/: context.rs  mod.rs  render.rs
views/: default.json
