[package]
name = "mail_nvim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
derive_builder = "0.20.2"
directories = "6.0.0"
imap-client = { git = "https://github.com/aliyss/imap-client", branch = "master" }
email-lib = { version = "0.26", default-features = false, features = ["tokio-rustls", "derive", "thread"] }
himalaya = { git = "https://github.com/pimalaya/himalaya", branch = "master" }
pimalaya-tui = { version = "0.2.2", features = ["email", "himalaya"] }
nvim-oxi = { version = "0.6.0", features = ["neovim-0-11", "test"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["test-util"] }
chrono = "0.4.42"
anyhow = "1.0.100"

[patch.crates-io]
# Required due to imap-client having the rustls-platform-verifier which somehow breaks building himalaya
# See: https://github.com/pimalaya/imap-client/issues/17
imap-client = { git = "https://github.com/aliyss/imap-client", branch = "master" }
# After successfully using the imap-client, we also need to patch  serde-toml-merge which is used by himalaya because the newer version of serde-toml-merge uses toml 0.9.5 which is incompatible with pimalaya-tui that uses toml 0.8
serde-toml-merge = { git = "https://github.com/jdrouet/serde-toml-merge", rev = "a963672ec1b6186fbc07fecefdcb7584a54ecc6b" }
